--- a/css/index.css
+++ b/css/index.css
@@ -17,7 +17,7 @@ body {
     font-family: HarmonyOS Sans SC,Inter,Helvetica Neue,Helvetica,PingFang SC,Hiragino Sans GB,Microsoft YaHei,微软雅黑,Arial,sans-serif;
 }
 body {
-    overflow: auto;
+    overflow: hidden;
 }
 body * {
     box-sizing: border-box;
@@ -51,12 +51,34 @@ p {
 #app {
     width: 100%;
     height: 100%;
+    overflow: hidden;  
+}
+#app > div {
+    width: 100%;
+    height: 100%;
+    overflow: auto; 
+}
+.container {
+    width: 100%;
     min-width: 1080px;
+    padding-top: 80px;
+    position: relative;
 }
 .header {
     height: 80px;
+    background: #fff;
+    position: fixed;
+    top: 0px;
+    left: 0px;
+    width: 100%;
+    z-index: 100;
+    transition: all .2s;
+}
+.scroll .header {
+    box-shadow: 0 0 8px 0 rgba(0, 0, 0, .12);
 }
 .header .content {
+    height: 100%;
     padding: 23px 0px;
     display: flex;
 }
@@ -75,6 +97,7 @@ p {
     outline: none;
     color: rgba(0, 0, 0, 0.50);
     cursor: pointer;
+    font-size: 16px;
 }
 .header .content .pos-right .el-dropdown-link svg {
     vertical-align: top;
@@ -88,6 +111,7 @@ p {
     margin-left: 40px;
     cursor: pointer;
     line-height: 22px;
+    font-size: 16px;
 }
 .header .content .pos-right .el-link:hover {
     color: #F09324;
@@ -98,8 +122,8 @@ p {
     display: none;
 }
 .banner {
-    padding-top: 294px;
-    padding-bottom: 338px;
+    padding-top: 180px;
+    padding-bottom: 180px;
 }
 .banner > .content {
     display: flex;
@@ -124,7 +148,7 @@ p {
     line-height: 30px;
     margin-bottom: 40px;
 }
-.banner > .content .pos-left .btn-group button {
+/*.banner > .content .pos-left .btn-group button {
     width: 164px;
     height: 48px;
     border-radius: 100px;
@@ -136,7 +160,7 @@ p {
     background: #F09324;
     color: #fff;
     border: 1.5px solid #F09324;
-}
+}*/
 .banner > .content .pos-right img {
     width: 610px;
 }
@@ -453,8 +477,8 @@ button.home-btn.is-round {
 }
 
 .footer {
-    height: 300px;
-    padding-top: 100px;
+    height: 200px;
+    padding-top: 50px;
     background: #464F5F;
     color: rgba(255, 255, 255, 0.85);
     font-weight: 300;
@@ -481,7 +505,7 @@ button.home-btn.is-round {
     font-family: PingFang SC;
     font-weight: 300;
     text-align: center;
-    margin-top: 120px;
+    margin-top: 60px;
 }
 
 .content {
