--- a/css/index.css
+++ b/css/index.css
@@ -271,6 +271,12 @@ button.home-btn.is-round {
     bottom: 50px;
     left: 50px;
 }
+.resource > .content .card .card-content .card-btn .home-btn {
+    height: 42px;
+    line-height: 42px;
+    padding: 0px 20px;
+    font-size: 16px;
+}
 .community > .content {
     padding-top: 150px;
 }
